api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1
  selector:
    matchLabels: { app: api }
  template:
    metadata:
      labels: { app: api }
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: api
          image: iossifchromeye/companyapi:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3004
          readinessProbe:
            httpGet: { path: "/", port: 3004 }
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: "/", port: 3004 }
            initialDelaySeconds: 10
            periodSeconds: 20
          resources:
            requests: { cpu: "50m", memory: "64Mi" }
            limits:   { cpu: "500m", memory: "256Mi" }
          volumeMounts:
            - name: data-volume
              mountPath: /app/data
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: api-data
