api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector: { app: api }
  ports:
    - name: http
      port: 3004
      targetPort: 3004
      protocol: TCP
  type: ClusterIP
